# inVisibool

./: .gitignore  .gitleaks.toml  Cargo.toml  Dockerfile.dev  LICENSE
.github/workflows/: ci.yml
crates/invisibool/: Cargo.toml
crates/invisibool-clipboard/: Cargo.toml
crates/invisibool-clipboard/src/: display_server.rs  error.rs  hints.rs  in_memory.rs  lib.rs
crates/invisibool-clipboard/src/x11/: atoms.rs  dispatcher.rs  event_thread.rs  mod.rs  pending.rs  state.rs
crates/invisibool-clipboard/tests/: leak_harness_extension.rs  x11_integration.rs
crates/invisibool-control/: Cargo.toml
crates/invisibool-control/src/: error.rs  lib.rs  lifecycle.rs  path.rs  peer.rs  transport.rs  wire.rs
crates/invisibool-control/tests/: integration.rs
crates/invisibool-engine/: Cargo.toml
crates/invisibool-engine/benches/: scrub.rs
crates/invisibool-engine/examples/: gen_bench_fixtures.rs
crates/invisibool-engine/src/: engine.rs  idempotence.rs  lib.rs  session_file.rs
crates/invisibool-engine/src/keychain/: in_memory.rs  mod.rs  os.rs
crates/invisibool-engine/src/tokenizer/: alphabet.rs  fpe.rs  mac.rs  mod.rs  session.rs
crates/invisibool-engine/src/vault/: format.rs  io.rs  mod.rs  path.rs
crates/invisibool-engine/tests/: leak_harness.rs
crates/invisibool-engine/tests/fixtures/: README.md  source_64kb.rs
crates/invisibool/src/: main.rs
crates/invisibool/src/cli/: args.rs  commands.rs
demo/: chunk23.sh  chunk24.sh
docs/: THREAT_MODEL.md
