[package]
name = "invisibool-engine"
description = "Detection, tokenization, and vault primitives for Invisibool. Surface-agnostic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
