[package]
name = "invisibool"
description = "Invisibool CLI: local, privacy-first secrets and PII scrubber for LLM prompts."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "invisibool"
path = "src/main.rs"

[dependencies]
invisibool-engine = { workspace = true }
invisibool-control = { workspace = true }
clap = { workspace = true }
rpassword = { workspace = true }
zeroize = { workspace = true }
# serde_json only for parsing the status response's typed `data`
# payload; already a workspace dep for the engine.
serde_json = { workspace = true }

[lints]
workspace = true
